--- a/estilo/style.css
+++ b/estilo/style.css
@@ -19,7 +19,7 @@ header {
     
 }
 header h1 {
-    background-color: black;
+    background-color: rgb(250, 0, 0);
     color: aliceblue;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 5em;
@@ -32,7 +32,7 @@ header h1 {
     gap: 30px;
     margin: auto;
     background-color: rgb(0, 0, 0);
-    border: 2px black solid;
+    border: 2px rgb(255, 0, 0) solid;
     width: 90%;
     overflow: hidden;
 
