--- a/estilo/style.css
+++ b/estilo/style.css
@@ -9,7 +9,7 @@
 header {
     width: 100vw;
     height: 20vh;
-    background-color: black;
+    background-color: rgb(193, 196, 40);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -19,8 +19,8 @@ header {
     
 }
 header h1 {
-    background-color: rgb(250, 0, 0);
-    color: aliceblue;
+    background-color: rgb(217, 219, 68);
+    color: rgb(0, 0, 0);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 5em;
 }
@@ -31,8 +31,8 @@ header h1 {
     grid-template-rows: repeat(2,1fr);
     gap: 30px;
     margin: auto;
-    background-color: rgb(0, 0, 0);
-    border: 2px rgb(255, 0, 0) solid;
+    background-color: rgb(153, 35, 35);
+    border: 2px black solid;
     width: 90%;
     overflow: hidden;
 
